# mage-1.0-legacy

./: .gitignore  AUTHORS  CMakeLists.txt  INSTALL  README
data/voices/qst001/ver1/: tree-dur.inf  tree-lf0.inf  tree-mgc.inf
examples/: CMakeLists.txt
examples/AlphaOverwrite/: AlphaOverwrite.c  CMakeLists.txt
examples/DurationOverwrite/: CMakeLists.txt  DurationOverwrite.c
examples/DurationScale/: CMakeLists.txt  DurationScale.c
examples/DurationShift/: CMakeLists.txt  DurationShift.c
examples/PitchOverwrite/: CMakeLists.txt  PitchOverwrite.c
examples/PitchShift/: CMakeLists.txt  PitchShift.c
examples/SpeedOverwrite/: CMakeLists.txt  SpeedOverwrite.c
examples/VolumeOverwrite/: CMakeLists.txt  VolumeOverwrite.c
examples/empty/: CMakeLists.txt  empty.c
mage/: BUGS  CMakeLists.txt  NEWS  TODO
mage/htslib/: CMakeLists.txt  HTS_audio.c  HTS_engine.c  HTS_engine.h  HTS_gstream.c  HTS_hidden.h  HTS_label.c  HTS_misc.c  HTS_model.c  HTS_pstream.c  HTS_sstream.c  HTS_vocoder.c
mage/magelib/: CMakeLists.txt  MAGE.c  MAGE.h
mage/phtslib/: CMakeLists.txt  pHTS.c  pHTS.h  p_HTS_engine.c  p_HTS_engine.h  p_HTS_gstream.c  p_HTS_label.c  p_HTS_model.c  p_HTS_pstream.c  p_HTS_sstream.c
mage/thread/: CMakeLists.txt  pa_ringbuffer.h
ofxMageExamples/ofxAlphaOverwriteExample/ofxAlphaOverwriteExample.xcodeproj/: Maipn.mode1v3  Maipn.pbxuser  project.pbxproj
ofxMageExamples/ofxAlphaOverwriteExample/src/: main.cpp  ofxMageThread.cpp  testApp.cpp  testApp.h
ofxMageExamples/ofxDurationOverwriteExample/ofxDurationOverwriteExample.xcodeproj/: Maipn.mode1v3  Maipn.pbxuser  project.pbxproj
ofxMageExamples/ofxDurationOverwriteExample/src/: main.cpp  ofxMageThread.cpp  testApp.cpp  testApp.h
ofxMageExamples/ofxDurationScaleExample/ofxDurationScaleExample.xcodeproj/: Maipn.mode1v3  Maipn.pbxuser  project.pbxproj
ofxMageExamples/ofxDurationScaleExample/src/: main.cpp  ofxMageThread.h  testApp.cpp  testApp.h
ofxMageExamples/ofxDurationShiftExample/ofxDurationShiftExample.xcodeproj/: Maipn.mode1v3  Maipn.pbxuser  project.pbxproj
ofxMageExamples/ofxDurationShiftExample/src/: main.cpp  ofxMageThread.cpp  ofxMageThread.h  testApp.cpp  testApp.h
ofxMageExamples/ofxEmptyExample/ofxEmptyExample.xcodeproj/: Maipn.mode1v3  Maipn.pbxuser  project.pbxproj
ofxMageExamples/ofxEmptyExample/src/: main.cpp  testApp.cpp  testApp.h
ofxMageExamples/ofxOscControlExample/ofxOscControlExample.xcodeproj/: Maipn.mode1v3  Maipn.pbxuser  project.pbxproj
ofxMageExamples/ofxOscControlExample/src/: main.cpp  ofxMageSynth.cpp  ofxMageSynth.h  ofxOscParser.cpp  ofxOscParser.h  testApp.cpp  testApp.h
ofxMageExamples/ofxPitchOverwriteExample/ofxPitchOverwriteExample.xcodeproj/: Maipn.mode1v3  Maipn.pbxuser  project.pbxproj
ofxMageExamples/ofxPitchOverwriteExample/src/: main.cpp  testApp.cpp  testApp.h
ofxMageExamples/ofxPitchShiftExample/ofxPitchShiftExample.xcodeproj/: Maipn.mode1v3  Maipn.pbxuser  project.pbxproj
ofxMageExamples/ofxPitchShiftExample/src/: main.cpp  testApp.cpp  testApp.h
ofxMageExamples/ofxSpeedOverwriteExample/ofxSpeedOverwriteExample.xcodeproj/: Maipn.mode1v3  Maipn.pbxuser  project.pbxproj
ofxMageExamples/ofxSpeedOverwriteExample/src/: main.cpp  ofxMageThread.cpp  ofxMageThread.h  testApp.cpp  testApp.h
ofxMageExamples/ofxVolumeOverwriteExample/ofxVolumeOverwriteExample.xcodeproj/: Maipn.mode1v3  Maipn.pbxuser  project.pbxproj
ofxMageExamples/ofxVolumeOverwriteExample/src/: main.cpp  ofxMageThread.cpp  testApp.cpp  testApp.h
