FILE(GLOB SRC *.cpp *.c)
FILE(GLOB HDR *.hpp *.h)

ADD_LIBRARY(${MAGE_LIB_NAME} ${SRC} ${HDR})
ADD_DEPENDENCIES(${MAGE_LIB_NAME} m ${PHTS_LIB_NAME} ${HTS_LIB_NAME} ${THREAD_LIB_NAME})

TARGET_LINK_LIBRARIES(${MAGE_LIB_NAME} ${PHTS_LIB_NAME})

IF (BUILD_SHARED_LIBS)
	INSTALL(TARGETS ${MAGE_LIB_NAME} LIBRARY DESTINATION lib/${MAGE_LIB_INSTALL_SUBPATH})
ELSE ()
	INSTALL(TARGETS ${MAGE_LIB_NAME} ARCHIVE DESTINATION lib/${MAGE_LIB_INSTALL_SUBPATH})
ENDIF ()

INSTALL(FILES ${HDR} DESTINATION include/${MAGE_HDR_INSTALL_SUBPATH})

