FILE(GLOB SRC *.cpp *.c)
FILE(GLOB HDR *.hpp *.h)

ADD_LIBRARY(${THREAD_LIB_NAME} ${SRC} ${HDR})

IF (BUILD_SHARED_LIBS)
	INSTALL(TARGETS ${THREAD_LIB_NAME} LIBRARY DESTINATION lib/${MAGE_LIB_INSTALL_SUBPATH})
ELSE ()
	INSTALL(TARGETS ${THREAD_LIB_NAME} ARCHIVE DESTINATION lib/${MAGE_LIB_INSTALL_SUBPATH})
ENDIF ()

INSTALL(FILES ${HDR} DESTINATION include/${MAGE_HDR_INSTALL_SUBPATH})

